# xarray-sentinel

./: .cruft.json  .env.in  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  S1A_S3_SLC__1SDV_20210401T152855_20210401T152914_037258_04638E_6001.SAFE  S1B_IW_SLC__1SDV_20210401T052622_20210401T052650_026269_032297_EFA4.SAFE  envinment-ci.yml  environment-ci.yml  environment-dev.yml  environment-minver.yml  environment.yml  pyproject.toml  pyproject.toml.rej  setup.cfg  setup.py
.github/workflows/: on-push.yml
ci/: environment-ci.yml  environment-integration.yml
docs/: DATATREE.md  USER-REQUIREMENTS.md  conf.py  index.md
notebooks/: Sentinel-1_GRD_IW.ipynb  Sentinel-1_GRD_SM.ipynb  Sentinel-1_SLC_IW.ipynb  Sentinel-1_SLC_SM.ipynb  download_data.sh  fsspec-with-credentials.ipynb  fsspec.ipynb
tests/: slow_test_40_reformat.py  slow_test_50_cfchecker.py  slow_test_reformat.py  test_00_version.py  test_10_dataspace_client.py  test_10_esa_safe.py  test_15_eopf_metadata.py  test_20_sentinel1.py  test_30_eopf_metadata.py  test_30_sentinel1_fsspec.py  test_30_xarray.py  test_30_xarray_backends.py  test_35_xarray_backends_dask.py  test_40_eopf_product.py  test_40_reformat_netcdf4.py  test_40_reformat_zarr.py  test_40_treenav.py  test_esa_safe.py  test_reformat.py  test_sentinel1.py  test_xarray.py
tests/data/: download.sh
tests/data/S1A_EW_SLC__1SDH_20210403T122536_20210403T122630_037286_046484_8152.SAFE/: manifest.safe
tests/data/S1A_EW_SLC__1SDH_20210403T122536_20210403T122630_037286_046484_8152.SAFE/annotation/: s1a-ew1-slc-hh-20210403t122536-20210403t122628-037286-046484-001.xml  s1a-ew1-slc-hv-20210403t122536-20210403t122628-037286-046484-006.xml
tests/data/S1A_EW_SLC__1SDH_20210403T122536_20210403T122630_037286_046484_8152.SAFE/measurement/: s1a-ew1-slc-hh-20210403t122536-20210403t122628-037286-046484-001.tiff  s1a-ew5-slc-hv-20210403t122538-20210403t122630-037286-046484-010.tiff
tests/data/S1A_EW_SLC__1SDH_20210403T122536_20210403T122630_037286_046484_8152.SAFE/support/: s1-object-types.xsd
tests/data/S1A_IW_SLC__1SDH_20220414T102209_20220414T102236_042768_051AA4_E677.SAFE/: manifest.safe
tests/data/S1A_IW_SLC__1SDH_20220414T102209_20220414T102236_042768_051AA4_E677.SAFE/annotation/: s1a-iw1-slc-hh-20220414t102211-20220414t102236-042768-051aa4-001.xml
tests/data/S1A_IW_SLC__1SDH_20220414T102209_20220414T102236_042768_051AA4_E677.SAFE/measurement/: s1a-iw1-slc-hh-20220414t102211-20220414t102236-042768-051aa4-001.tiff
tests/data/S1A_S3_SLC__1SDV_20210401T152855_20210401T152914_037258_04638E_6001.SAFE/: manifest.safe
tests/data/S1A_S3_SLC__1SDV_20210401T152855_20210401T152914_037258_04638E_6001.SAFE/annotation/: s1a-s3-slc-vh-20210401t152855-20210401t152914-037258-04638e-001.xml  s1a-s3-slc-vv-20210401t152855-20210401t152914-037258-04638e-002.xml
tests/data/S1A_S3_SLC__1SDV_20210401T152855_20210401T152914_037258_04638E_6001.SAFE/annotation/calibration/: calibration-s1a-s3-slc-vh-20210401t152855-20210401t152914-037258-04638e-001.xml  calibration-s1a-s3-slc-vv-20210401t152855-20210401t152914-037258-04638e-002.xml
tests/data/S1A_S3_SLC__1SDV_20210401T152855_20210401T152914_037258_04638E_6001.SAFE/measurement/: s1a-s3-slc-vh-20210401t152855-20210401t152914-037258-04638e-001.tiff
tests/data/S1A_S6_SLC__1SDV_20210402T115512_20210402T115535_037271_046407_39FD.SAFE/: manifest.safe
tests/data/S1B_IW_GRDH_1SDV_20210401T052623_20210401T052648_026269_032297_ECC8.SAFE/: manifest.safe
tests/data/S1B_IW_GRDH_1SDV_20210401T052623_20210401T052648_026269_032297_ECC8.SAFE/annotation/: s1b-iw-grd-vh-20210401t052623-20210401t052648-026269-032297-002.xml  s1b-iw-grd-vv-20210401t052623-20210401t052648-026269-032297-001.xml
tests/data/S1B_IW_GRDH_1SDV_20210401T052623_20210401T052648_026269_032297_ECC8.SAFE/measurement/: s1b-iw-grd-vv-20210401t052623-20210401t052648-026269-032297-001.tiff
tests/data/S1B_IW_SLC__1SDV_20210401T052622_20210401T052650_026269_032297_EFA4.SAFE/: manifest.safe
tests/data/S1B_IW_SLC__1SDV_20210401T052622_20210401T052650_026269_032297_EFA4.SAFE/annotation/: s1b-iw1-slc-vh-20210401t052624-20210401t052649-026269-032297-001.xml  s1b-iw1-slc-vv-20210401t052624-20210401t052649-026269-032297-004.xml  s1b-iw2-slc-vh-20210401t052622-20210401t052650-026269-032297-002.xml
tests/data/S1B_IW_SLC__1SDV_20210401T052622_20210401T052650_026269_032297_EFA4.SAFE/annotation/calibration/: calibration-s1b-iw1-slc-vh-20210401t052624-20210401t052649-026269-032297-001.xml  calibration-s1b-iw1-slc-vv-20210401t052624-20210401t052649-026269-032297-004.xml  calibration-s1b-iw2-slc-vh-20210401t052622-20210401t052650-026269-032297-002.xml  noise-s1b-iw1-slc-vh-20210401t052624-20210401t052649-026269-032297-001.xml  noise-s1b-iw1-slc-vv-20210401t052624-20210401t052649-026269-032297-004.xml  noise-s1b-iw2-slc-vh-20210401t052622-20210401t052650-026269-032297-002.xml
tests/data/S1B_IW_SLC__1SDV_20210401T052622_20210401T052650_026269_032297_EFA4.SAFE/measurement/: s1b-iw1-slc-vh-20210401t052624-20210401t052649-026269-032297-001.tiff  s1b-iw1-slc-vv-20210401t052624-20210401t052649-026269-032297-004.tiff  s1b-iw2-slc-vh-20210401t052622-20210401t052650-026269-032297-002.tiff
tests/data/S1B_WV_SLC__1SSV_20210403T083025_20210403T084452_026300_032390_D542.SAFE/: manifest.safe
tests/data/S2A_MSIL1C_20210403T101021_N0300_R022_T33TUM_20210403T110551.SAFE/: manifest.safe
xarray_sentinel/: __init__.py  __main__.py  conventions.py  datasets.py  dataspace_client.py  eopf_metadata.py  eopf_product.py  esa_safe.py  reformat.py  sentinel1.py  treenav.py  xarray_backends.py
xarray_sentinel/resources/sentinel1/: my-gml.xsd  my-no-namespace.xsd  my-safe-sentinel-1.0-sentinel-1-sar-level-1.xsd  my-safe-sentinel-1.0-sentinel-1.xsd  my-safe-sentinel-1.0.xsd  my-schema_orb.xsd  my-xfdu.xsd  s1-level-1-product.xsd  s1-object-types.xsd
