[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[dependency-groups]
dev = [
  "cfchecker>=4.1.0",
  "mypy>=1.15.0",
  "myst-parser>=4.0.1",
  "pandas-stubs>=1.4.0",
  "pre-commit>=4.3.0",
  "pydata-sphinx-theme>=0.16.1",
  "pytest>=7.0",
  "pytest-cov>=5.0",
  "shapely>=2.1",
  "sphinx-autoapi>=3.6.0",
  "stac-valid>=4.2.1",
  "zarr>=2.18.3"
]

[project]
authors = [{"name" = "B-Open", "email" = "software@bopen.eu"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "dask>=2023.9",
  "distributed>=2023.9",
  "fsspec>=2024.1",
  "numpy>=1.25",
  "pandas>=2.1",
  "rioxarray>=0.18",
  "scipy>=1.11",
  "typer>=0.26.7",
  "xarray>=2024.10",
  "xmlschema>=3.4"
]
description = "Easily access and explore the SAR data products of the Copernicus Sentinel-1 satellite mission"
dynamic = ["version"]
keywords = [
  "copernicus",
  "earth-observation",
  "radar",
  "remote-sensing",
  "satellite-imagery",
  "sentinel-1",
  "sar",
  "synthetic-aperture-radar",
  "xarray"
]
license = {file = "LICENSE"}
name = "xarray-sentinel"
readme = "README.md"
requires-python = ">=3.10"

[project.entry-points."xarray.backends"]
sentinel-1 = "xarray_sentinel.xarray_backends:Sentinel1Backend"

[project.optional-dependencies]
lab = [
  "jupyterlab>=4.5.7",
  "jupyterlab-execute-time>=3.3.0",
  "matplotlib>=3.10.9",
  "s3fs>=2026.4.0"
]

[project.urls]
repository = "https://github.com/bopen/xarray-sentinel"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "cfchecker",
  "dask",
  "fsspec",
  "pydantic",
  "pydantic.alias_generators",
  "rasterio",
  "shapely",
  "shapely.geometry",
  "shapely.wkt",
  "stac_validator"
]

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["xarray_sentinel"]

[tool.setuptools.package-data]
xarray_sentinel = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "999"
write_to = "xarray_sentinel/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''

[tool.uv]
# Wait before upgrading to the newest versions to avoid
# regressions and supply-chain attacks
exclude-newer = "7 days"
