[metadata]
name = xarray-sentinel
author = B-Open
author_email = software@bopen.eu
license = Apache License 2.0
description = Easily explore and access the SAR data products of the Copernicus Sentinel-1 satellite mission
url = https://github.com/bopen/xarray-sentinel
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.7
install_requires =
    dask
    fsspec
    rioxarray
    xarray >= 0.18.0
    xmlschema
include_package_data = True

[options.entry_points]
xarray.backends =
    sentinel-1 = xarray_sentinel.xarray_backends:Sentinel1Backend

[mypy]

[mypy-xmlschema]
ignore_missing_imports = True

[mypy-xarray_sentinel.version]
ignore_missing_imports = True
