[metadata]
name = xarray-sentinel
author = B-Open
author_email = software@bopen.eu
license = Apache License 2.0
description = Easily access and explore the SAR data products of the Copernicus Sentinel-1 satellite mission
url = https://github.com/bopen/xarray-sentinel
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md
keywords = copernicus, earth-observation, radar, remote-sensing, satellite-imagery, sentinel-1, sar, synthetic-aperture-radar, xarray

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fsspec
    numpy
    pandas
    rioxarray
    xarray >= 0.18.0
    xmlschema
include_package_data = True

[options.entry_points]
xarray.backends =
    sentinel-1 = xarray_sentinel.xarray_backends:Sentinel1Backend

[mypy]

[mypy-cfchecker]
ignore_missing_imports = True

[mypy-dask]
ignore_missing_imports = True

[mypy-fsspec]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-rasterio]
ignore_missing_imports = True

[mypy-shapely]
ignore_missing_imports = True

[mypy-shapely.geometry]
ignore_missing_imports = True

[mypy-shapely.wkt]
ignore_missing_imports = True

[mypy-xarray_sentinel.version]
ignore_missing_imports = True

[mypy-xmlschema]
ignore_missing_imports = True
